--- a/reset.css
+++ b/reset.css
@@ -11,14 +11,14 @@ small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 /* dl, dt, dd, ol, ul, li, */
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
+/* table, caption, tbody, tfoot, thead, tr, th, td, */
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	/* border: 0; */
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -42,8 +42,8 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
-table {
-	border-collapse: collapse;
+/* table { */
+	/* border-collapse: collapse;
 	border-spacing: 0;
 	
-}
+} */
